completed tasks in menu.js, and imported menu.less

--- a/LESS/index.less
+++ b/LESS/index.less
@@ -8,6 +8,9 @@
 //import articles
 @import '../Article/Article.less';
 
+//import menu
+@import '../Menu/Menu.less';
+
 html, body {
   margin: 0;
   padding: 0;
